# Arrowhead_CoSIM_Module

./: README.md
arrowhead/src/: README.md
arrowhead/src/car_package/: CMakeLists.txt  package.xml
arrowhead/src/car_package/include/car_package/: DiscoveryRequester.hpp  PoliceService.hpp  SimulationPath.hpp  TrafficService.hpp  VehicleService.hpp  VehicleService.tpp
arrowhead/src/car_package/src/: DiscoveryRequester.cpp  PoliceRun.cpp  PoliceService.cpp  SimulationPath.cpp  SimulationRun.cpp  TrafficRun.cpp  TrafficService.cpp
arrowhead/src/car_package/src/files/: CarPath1.json  CarPath2.json  ServicesTraffic.json  Simulation1.json  Simulation2.json
arrowhead/src/car_package/test/: PoliceTest.cpp
arrowhead/src/car_package/test/files/: CarPath2.json  ServicesPolice1.json  ServicesPolice2.json
arrowhead/src/cpp_pubsub/: CMakeLists.txt  package.xml
arrowhead/src/cpp_pubsub/include/cpp_pubsub/: PoliceService.hpp  RSUService.hpp  RSUService.tpp  RegistrationRequester.hpp  TrafficService.hpp
arrowhead/src/cpp_pubsub/src/: PoliceRun.cpp  PoliceService.cpp  RegistrationRequester.cpp  TrafficRun.cpp  TrafficService.cpp
arrowhead/src/cpp_pubsub/src/files/: ServicePolice2.json  ServiceTraffic1.json  ServiceTraffic2.json  ServiceTraffic3.json
arrowhead/src/cpp_pubsub/test/: PoliceTest.cpp
arrowhead/src/cpp_pubsub/test/files/: ServicePolice1.json  ServicePolice2.json
arrowhead/src/services_discovery/: CMakeLists.txt
arrowhead/src/services_discovery/include/services_discovery/: ServiceDiscover.hpp
arrowhead/src/services_discovery/src/: DiscoveryRequestReceiver.cpp  ServiceDiscover.cpp
arrowhead/src/services_registry/: CMakeLists.txt  package.xml
arrowhead/src/services_registry/include/services_registry/: ServiceRegister.hpp
arrowhead/src/services_registry/src/: RegistrationRequestReceiver.cpp  ServiceRegister.cpp
artery-ros2-micro/: .project  CMakeLists.txt
artery-ros2-micro/scenarios/: CMakeLists.txt
artery-ros2-micro/src/ros2/: BasicRobotLifecycleController.cc  BasicRobotLifecycleController.h  BasicRobotLifecycleController.ned  CMakeLists.txt  Connector.ned  Core.cc  Core.h  Core.ned  RobotCreationPolicy.h  RobotCreationPolicy.ned  RobotLifecycleController.ned  RobotObject.cc  RobotObject.h  RobotSink.h  Ros2Node.cc  Ros2Node.h  ServiceObject.cc  ServiceObject.h  ServiceSink.h  UniformRobotCreationPolicy.cc  UniformRobotCreationPolicy.h  UniformRobotCreationPolicy.ned  package.ned
micro_sensors/: CMakeLists.txt
micro_sensors/src/: main.c
ros2_package/arrowhead_msgs/: CMakeLists.txt  package.xml
ros2_package/arrowhead_registration_publisher/: CMakeLists.txt  package.xml
ros2_package/common/: CMakeLists.txt  package.xml
ros2_package/etsi_its_msgs/: CMakeLists.txt
ros2_package/gazebo_nodes/: CMakeLists.txt  package.xml
ros2_package/gazebo_nodes/gazebo_nodes/: random_vehicle_spawner.py
ros2_package/gazebo_nodes/include/gazebo_nodes/: gazebo_models.hpp  simulation_pose.hpp
ros2_package/gazebo_nodes/launch/: camera_start.launch.py  camera_state.launch.py  central_start.launch.py  central_state.launch.py  edge_start.launch.py  edge_state.launch.py  gazebo_world.launch.py  keyboard_drive.launch.py  prius_keyboard_start.launch.py  prius_keyboard_state.launch.py  prius_lite_state.launch.py  prius_mapping_start.launch.py  prius_mapping_state.launch.py  prius_move_forward.py  prius_moving_forward.launch.py  prius_start.launch.py  prius_state.launch.py  sensor_start.launch.py  sensor_state.launch.py  sonar_sensor_start.launch.py  sonar_sensor_start2.launch.py  sonar_sensor_state.launch.py  spawn_camera.launch.py  spawn_central.launch.py  spawn_edge.launch.py  spawn_prius.launch.py  spawn_prius2.launch.py  spawn_prius_keyboard.launch.py  spawn_prius_lite.launch.py  spawn_prius_mapping.launch.py  spawn_sensor.launch.py  spawn_sonar_sensor.launch.py  testing_actor_position_time.launch.py  testing_microros_msgtime.launch.py  testing_omnet_msgtime.launch.py  world_gazebo_start.launch.py
ros2_package/gazebo_nodes/maps/: map.pgm
ros2_package/gazebo_nodes/models/camera/: model.urdf
ros2_package/gazebo_nodes/models/central_controller/: model.config  model.urdf
ros2_package/gazebo_nodes/models/edge/: model.config  model.urdf
ros2_package/gazebo_nodes/models/laser_hokuyo/: model.config  model.urdf
ros2_package/gazebo_nodes/models/prius_custom/: model.urdf
ros2_package/gazebo_nodes/models/road_tracks/: model.config  model.sdf
ros2_package/gazebo_nodes/models/small_city_tracks/: model.config  model.sdf
ros2_package/gazebo_nodes/models/sonar_sensor/: model.urdf  model2.urdf  model3.urdf
ros2_package/gazebo_nodes/rviz/: urdf_config.rviz
ros2_package/gazebo_nodes/src/: actor_position_time.py  cam_receiver.py  costmap_receiver.py  microros_id.cpp  microrosmessage_time.py  ocmessage_time.py  sensor_reliable.cpp  sensor_tf_publisher.cpp  sonar_reliable.cpp  testing.cpp  velocity_publisher.py
ros2_package/gazebo_nodes/src/gazebo_models/: gazebo_models.cpp  gazebo_models_main.cpp
ros2_package/gazebo_nodes/src/transformations/global_tf/: global_tf.cpp  global_tf_main.cpp
ros2_package/gazebo_nodes/src/transformations/localization_pose/: localization_pose.cpp  localization_pose_main.cpp
ros2_package/gazebo_nodes/src/transformations/simulation_pose/: simulation_pose.cpp  simulation_pose_main.cpp
ros2_package/gazebo_nodes/worlds/: highway.world  highway_test.world  small_city.world  small_city_2.world  small_city_tracks.world  small_road_actor.world  small_road_fixed.world  test_world.world  teste.world
ros2_package/mapping/: CMakeLists.txt  package.xml
ros2_package/mapping/launch/: spawn_prius_mapping.launch.py
ros2_package/mapping/rviz/: config_prius_mapping.rviz
ros2_package/micro_its_msgs/: CMakeLists.txt  package.xml
ros2_package/micro_msgs/: CMakeLists.txt  package.xml
ros2_package/nav2/: CMakeLists.txt  package.xml
ros2_package/omnet/: CMakeLists.txt  package.xml
ros2_package/prius_description/: CMakeLists.txt
ros2_package/prius_msgs/: CMakeLists.txt
ros2_package/scenarios/: CMakeLists.txt  package.xml
(+225 files in other folders)
